<resources>
    <string name="app_name">Proksi</string>
    <string name="ip">ip</string>
    <string name="logo">logo</string>
    <string name="ip_address">127.0.0.1</string>
    <string name="network_port">8080</string>
    <string name="server">server</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="IP">IP</string>
    <string name="Port">Port</string>
</resources>